--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CryptoApp</string>
+    <string name="update_time">Обновлено: %s</string>
+    <string name="symbols_template">%s / %s</string>
+    <string name="current_price">Текущая стоимость</string>
 </resources>
